# pHfork

./: .gitignore  README.md  README.rst  example_AcidGas.ipynb  example_air_equilibrated_carbonate_solution.py  example_phosphate.py  pyproject.toml  test_demo.py
examples/: example_AcidGasEq.ipynb  example_acetate_buffer_with_salt.py  example_air_equilibrated_AcidGasEq.py  example_air_equilibrated_acetate.py  example_air_equilibrated_carbonate_solution.py  example_pHfork_vs_phreeqpython_NaOHaq_equil_atmosph_CO2.ipynb  example_phosphate.py  example_trisHCl.py
src/: AcidGasExample.ipynb  example_AcidGas.ipynb  example_air_equilibrated_AcidGasEq.py  example_air_equilibrated_carbonate_solution.py  example_carbonate_solution_air_eq.py  example_pHcalc_vs_phreeqpython_NaOHaq_equil_atmosph_CO2.ipynb  example_phosphate.py  example_trisHCl.py  test_air_equilibrated_acidgas.py
src/pHcalc/: __init__.py  pHcalc.py
src/pHfork/: __init__.py  pHfork.py
