# minimalist pyproject.toml

[project]
name = "pHfork"
version = "0.4.0"
authors = [
  {name="Ryan Nelson", email="rnelsonchem@gmail.com" },
  {name="T. Onoz"},
  {name="Martinus H. V. Werts", email="martinus.werts@univ-angers.fr"},
]
description = "Systematic pH calculation package for Python"
keywords = [ "pH", "systematic", "distribution", "titration", "acid", "base" ]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3',
]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
        'numpy>=1.20.0',
        'scipy>=1.10.0',
        ]
        
[project.urls]
"Homepage" = "https://github.com/mhvwerts/pHfork"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
